
syntax = "proto3";

package address_app_package;

service AddressApp {
    rpc registerAddress (address) returns (dbAddress) {}
    rpc updateAddress (address) returns (dbAddress) {}
    rpc getAllAddresses (addressEmpty) returns (addresss) {}
}

message addresss {
    repeated dbAddress addresses = 1;
}

message address {
    string customerId = 1 ;
    string districtId = 2 ;
    string address = 3 ;
    string location = 4 ;
}

message dbAddress {
    string id = 1 ;
    string customerId = 2 ;
    string districtId = 3 ;
    string address = 4 ;
    string location = 5 ;
}

message addressEmpty {

}



